--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-architect
+theme: Intelligent Educational Systems Research Group
+title: IESRG's homepage
+description: This is a web page about our research group!
